--- a/_posts/2023-09-10-Box.md
+++ b/_posts/2023-09-10-Box.md
@@ -17,7 +17,7 @@ type: hacks
 </body>
 
 <script>
-    // start on page load
+    
     window.addEventListener('load', function () {
         const canvas = document.getElementById('spriteContainer');
         const ctx = canvas.getContext('2d');
@@ -43,7 +43,7 @@ type: hacks
                 this.frameY = 0;
                 this.frameX = 0;
                 this.maxFrame = 7;
-                this.speed = 10; // You can adjust the speed
+                this.speed = 10; 
             }
             setFrameLimit(limit) {
                 this.maxFrame = limit;
@@ -75,7 +75,7 @@ type: hacks
         }
 
         const box = new Box();
-        
+
         const keyState = {
             ArrowLeft: false,
             ArrowRight: false,
@@ -110,9 +110,8 @@ type: hacks
             }
         });
 
-        // Check key states and update animations in your animation loop
         function updateAnimations() {
-            let selectedAnimation = 'A';  // Set a default animation
+            let selectedAnimation = 'A';
             box.frameY = 0;
             if (keyState.ArrowLeft) {
                 box.x -= box.speed;
@@ -124,33 +123,21 @@ type: hacks
                 selectedAnimation = 'B';
                 box.frameY = 1;
             } 
-            // Use `selectedAnimation` to update animations or other logic.
         }
-
 
         let lastTimestamp = 0;
         function animate(timestamp) {
             const deltaTime = timestamp - lastTimestamp;
             if (deltaTime >= FRAME_INTERVAL) {
-                // Clears the canvas to remove the previous frame.
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
-                // Draws the current frame of the sprite.
                 box.draw(ctx);
-
                 box.update();
-
-                // Update animations based on key states
                 updateAnimations();
-
-                // Uses `requestAnimationFrame` to synchronize the animation loop with the display's refresh rate,
-                // ensuring smooth visuals.
                 lastTimestamp = timestamp;
             }
             requestAnimationFrame(animate);
         }
 
-
-        // run 1st animate
         animate();
     });
 </script>
