--- a/_posts/2023-09-10-homepage.md
+++ b/_posts/2023-09-10-homepage.md
@@ -7,6 +7,7 @@ description: in progress
 type: background
 courses: { compsci: {week: 1} }
 ---
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +37,6 @@ courses: { compsci: {week: 1} }
             font-size: 100px;
             color: orange; 
         }
-
         .button {
             background-color: #CD5C5C;
             border: 2px solid white;
@@ -57,14 +57,17 @@ courses: { compsci: {week: 1} }
 <!-- Prepare background DOM canvas -->
 <canvas id="BackyRoundyCanvas"></canvas>
 
+<!-- PINKY CHARECTER PAGE --> 
 <div id="game-container">
     <h1 id="title">DELIVERIES!</h1>
-    <button class="button" onclick="startGame('easy')">Easy</button>
+    <button class="button" onclick="easy()">Easy</button>
+    <!--
     <br>
     <button class="button" onclick="startGame('medium')">Medium</button>
     <br>
     <button class="button" onclick="startGame('hard')">Hard</button>
 </div>
+-->
 
 <script>
     const canvas = document.getElementById("BackyRoundyCanvas");
@@ -122,21 +125,15 @@ courses: { compsci: {week: 1} }
             console.log(`Starting game with difficulty: ${difficulty}`);
             // Call your other functions or game logic here
         }
+    
 
-        // Define the easy function outside of the onload function
-        function easy() {
-            const image = new Image();
-            image.src = '{{site.baseurl}}/images/pinkyPage.png';
-
-            image.onload = function () {
-                // Clear the canvas before drawing the image
-                ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-                // Draw the image on the canvas
-                ctx.drawImage(image, 0, 0, canvas.width, canvas.height);
-            };
-        }
     };
+
+    function easy() {
+        
+    }
+
+    
 </script>
 
 </body>
