--- a/_posts/2023-10-26-test_boxy.md
+++ b/_posts/2023-10-26-test_boxy.md
@@ -8,211 +8,140 @@ type: background
 courses: { compsci: {week: 1} }
 ---
 
+<style>
+    .canvas-container {
+        display: flex;
+        background-image: url('images/Backy_Roundy.jpg');
+        background-size: repeat; 
+        background-attachment: fixed;
+        background-repeat: repeat;
+    }
+    canvas {
+        margin: 0;
+        border: 1px solid white;
+    }
+</style>
+
 <body>
-    <div>
-        <canvas id="spriteContainer">
-            <img id="box" src="{{site.baseurl}}/images/box.png"> 
+    <div class="canvas-container">
+        <canvas id="playerCanvas">
+                <img id="box" src="{{site.baseurl}}/images/box.png">
+                <img id="platform" src="{{site.baseurl}}/images/platform.png"> 
         </canvas>
     </div>
-    <script src="{{site.baseurl}}/assets/BoxGame/js/box.js"></script>
 </body>
 
 <script>
-window.addEventListener('load', function () {
-    const canvas = document.getElementById('spriteContainer');
-    const ctx = canvas.getContext('2d');
-    const SPRITE_WIDTH = 71.75;
-    const SPRITE_HEIGHT = 82.5;
-    const SCALE_FACTOR = 2;
-    const DESIRED_FRAME_RATE = 15;
-    const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
-    canvas.width = SPRITE_WIDTH * SCALE_FACTOR * 7;
-    canvas.height = SPRITE_HEIGHT * SCALE_FACTOR;
+    window.addEventListener('load', function () {
+        const canvas = document.getElementById('playerCanvas');
+        const ctx = canvas.getContext('2d');
+        const BOX_SPRITE_WIDTH = 71.75;
+        const BOX_SPRITE_HEIGHT = 82.5;
+        const BOX_SCALE_FACTOR = 2;
+        const DESIRED_FRAME_RATE = 15;
+        const FRAME_INTERVAL = 1000 / DESIRED_FRAME_RATE;
+        const PLATFORM_SPRITE_WIDTH = 362.25; 
+        const PLATFORM_SPRITE_HEIGHT = 377;
+        const PLATFORM_SCALE_FACTOR = 0.25;  
+        const PLATFORM_FRAME_LIMIT = 3;  
+        canvas.width = BOX_SPRITE_WIDTH * BOX_SCALE_FACTOR*6;
+        canvas.height = BOX_SPRITE_HEIGHT * BOX_SCALE_FACTOR*3;
 
-    class Box {
-        constructor() {
-            this.image = document.getElementById("box");
-            this.spriteWidth = SPRITE_WIDTH;
-            this.spriteHeight = SPRITE_HEIGHT;
-            this.width = this.spriteWidth;
-            this.height = this.spriteHeight;
-            this.x = 0;
-            this.y = 0;
-            this.scale = SCALE_FACTOR;
-            this.minFrame = 0;
-            this.frameY = 0;
-            this.frameX = 0;
-            this.maxFrame = 7;
-            this.speed = 10;
-        }
-
-        setFrameLimit(limit) {
-            this.maxFrame = limit;
-        }
-
-        setPosition(x, y) {
-            this.x = x;
-            this.y = y;
-        }
-
-        draw(context) {
-            context.drawImage(
-                this.image,
-                this.frameX * this.spriteWidth,
-                this.frameY * this.spriteHeight,
-                this.spriteWidth,
-                this.spriteHeight,
-                this.x,
-                this.y,
-                this.width * this.scale,
-                this.height * this.scale
-            );
-        }
-
-        update() {
-            if (this.frameX < this.maxFrame) {
-                this.frameX++;
-            } else {
-                this.frameX = 0;
-            }
-        }
-    }
-
-    const box = new Box();
-
-    const keyState = {
-        ArrowLeft: false,
-        ArrowRight: false,
-        ArrowUp: false,
-    };
-
-    document.addEventListener('keydown', function (event) {
-        switch (event.key) {
-            case 'ArrowLeft':
-                keyState.ArrowLeft = true;
-                break;
-            case 'ArrowRight':
-                keyState.ArrowRight = true;
-                break;
-            case 'ArrowUp':
-                keyState.ArrowUp = true;
-                break;
-        }
-    });
-
-    document.addEventListener('keyup', function (event) {
-        switch (event.key) {
-            case 'ArrowLeft':
-                keyState.ArrowLeft = false;
-                break;
-            case 'ArrowRight':
-                keyState.ArrowRight = false;
-                break;
-            case 'ArrowUp':
-                keyState.ArrowUp = false;
-                break;
-        }
-    });
-    document.addEventListener('DOMContentLoaded', function () {
-        const box = document.getElementById('box');
-
-        document.addEventListener('platformUpdated', function (event) {
-            const platformX = event.detail.platformX;
-            const platformY = event.detail.platformY;
-
-            // Update box position based on platform position
-            box.style.left = `${platformX}px`;
-            box.style.top = `${platformY}px`;
-        });
-
-        document.addEventListener('keydown', function (event) {
-            switch (event.key) {
-                case 'ArrowLeft':
-                    box.style.left = `${parseInt(box.style.left, 10) - 10}px`;
-                    break;
-                case 'ArrowRight':
-                    box.style.left = `${parseInt(box.style.left, 10) + 10}px`;
-                    break;
-                case 'ArrowUp':
-                    box.style.top = `${parseInt(box.style.top, 10) - 10}px`;
-                    break;
-                case 'ArrowDown':
-                    box.style.top = `${parseInt(box.style.top, 10) + 10}px`;
-                    break;
-            }
-        });
-    });
-
-    function updateAnimations() {
-        let selectedAnimation = 'A';
-        box.frameY = 0;
-        if (keyState.ArrowLeft) {
-            box.x -= box.speed;
-        }
-        if (keyState.ArrowRight) {
-            box.x += box.speed;
-        }
-        if (keyState.ArrowUp) {
-            selectedAnimation = 'B';
-            box.frameY = 1;
-        }
-    }
-
-    let lastTimestamp = 0;
-
-    function animate(timestamp) {
-        const deltaTime = timestamp - lastTimestamp;
-        if (deltaTime >= FRAME_INTERVAL) {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            box.draw(ctx);
-            box.update();
-            updateAnimations();
-            lastTimestamp = timestamp;
-        }
-        requestAnimationFrame(animate);
-    }
-
-    animate();
-});
-</script>
-
-<body>
-    <div>
-        <canvas id="spriteContainer"></canvas>
-    </div>
-    <script src="{{site.baseurl}}/assets/BoxGame/js/Platform_Animation.js"></script>
-</body>
-
-<script>
-window.addEventListener('load', function () {
-    const canvas = document.getElementById('spriteContainer');
-    const ctx = canvas.getContext('2d');
-    const SPRITE_WIDTH = 362.25;
-    const SPRITE_HEIGHT = 377;
-    const SCALE_FACTOR = 0.25;
-    const FRAME_LIMIT = 4;
-
-    canvas.width = SPRITE_WIDTH * SCALE_FACTOR*5;
-    canvas.height = SPRITE_HEIGHT * SCALE_FACTOR*3;
-
-    const platformImage = new Image();
-    platformImage.src = "{{site.baseurl}}/images/platform.png";
-
-    platformImage.onload = function () {
-        class Platform {
+        class Box {
             constructor() {
-                this.image = platformImage;
-                this.spriteWidth = SPRITE_WIDTH;
-                this.spriteHeight = SPRITE_HEIGHT;
+                this.image = document.getElementById("box");
+                this.spriteWidth = BOX_SPRITE_WIDTH;
+                this.spriteHeight = BOX_SPRITE_HEIGHT;
                 this.width = this.spriteWidth;
                 this.height = this.spriteHeight;
                 this.x = 0;
-                this.y = 0;
-                this.scale = SCALE_FACTOR;
+                this.y = 300;
+                this.scale = BOX_SCALE_FACTOR;
                 this.minFrame = 0;
-                this.maxFrame = FRAME_LIMIT;
+                this.frameY = 0;
+                this.frameX = 0;
+                this.maxFrame = 7;
+                this.speed = 10; 
+                this.gravity = 0.5; // Gravity value
+                this.onPlatform = false; // Flag to track if on platform
+                this.currentPlatform = null; // Reference to current platform
+            }
+            setFrameLimit(limit) {
+                this.maxFrame = limit;
+            }
+            setPosition(x, y) {
+                this.x = x;
+                this.y = y;
+            }
+            setPlatform(platform) {
+                this.currentPlatform = platform;
+            }
+            draw(context) {
+                context.drawImage(
+                    this.image,
+                    this.frameX * this.spriteWidth,
+                    this.frameY * this.spriteHeight,
+                    this.spriteWidth,
+                    this.spriteHeight,
+                    this.x,
+                    this.y,
+                    this.width * this.scale,
+                    this.height * this.scale
+                );
+            }
+            update() {
+                if (this.frameX < this.maxFrame) {
+                    this.frameX++;
+                } else {
+                    this.frameX = 0;
+                }
+
+                if (!this.onPlatform) {
+                    this.y += this.gravity; // Apply gravity
+                }
+
+                if (this.currentPlatform) {
+                    // Adjust box position based on platform's movement
+                    const platformMovement = this.currentPlatform.y - this.currentPlatform.prevY;
+                    this.y += platformMovement;
+                    this.currentPlatform = null; // Reset current platform if not colliding
+                }
+            }
+            checkCollision(platform) {
+                const isColliding = (
+                    this.x < platform.x + platform.width * platform.scale &&
+                    this.x + this.width * this.scale > platform.x &&
+                    this.y < platform.y + platform.height * platform.scale &&
+                    this.y + this.height * this.scale > platform.y
+                );
+
+                if (isColliding) {
+                    this.onPlatform = true; // Update onPlatform flag
+                    this.setPlatform(platform); // Set the current platform
+                } else {
+                    this.onPlatform = false; // Update onPlatform flag
+                    this.setPlatform(null); // Reset current platform if not colliding
+                }
+
+                return isColliding;
+            }
+        }
+
+        class Platform {
+            constructor() {
+                this.image = document.getElementById("platform");
+                this.spriteWidth = PLATFORM_SPRITE_WIDTH;
+                this.spriteHeight = PLATFORM_SPRITE_HEIGHT;
+                this.width = this.spriteWidth;
+                this.height = this.spriteHeight;
+                this.x = 200;
+                this.y = 400;
+                this.scale = PLATFORM_SCALE_FACTOR;
+                this.minFrame = 0;
+                this.maxFrame = PLATFORM_FRAME_LIMIT;
                 this.frameX = 0;
                 this.frameY = 0;
+                this.prevY = this.y; // Store previous y position
             }
 
             draw(context) {
@@ -230,49 +159,96 @@ window.addEventListener('load', function () {
             }
 
             update() {
+                this.prevY = this.y; // Update previous y position
                 if (this.frameX < this.maxFrame) {
                     this.frameX++;
                 } else {
                     this.frameX = 0;
                 }
-
-                const event = new CustomEvent('platformUpdated', {
-                    detail: {
-                        platformX: this.x,
-                        platformY: this.y
-                    }
-                });
-                document.dispatchEvent(event);
             }
         }
 
+        const box = new Box();
         const platform = new Platform();
 
-        let animationHasRun = false;
+        const keyState = {
+            ArrowLeft: false,
+            ArrowRight: false,
+            ArrowUp: false,
+        };
 
-        platform.draw(ctx);
         document.addEventListener('keydown', function (event) {
             switch (event.key) {
-                case ' ':
-                    if (!animationHasRun) {
-                        animationHasRun = true;
-                        animate();
-                    }
+                case 'w':
+                    keyState.ArrowUp = true;
+                    break;
+                case 'a':
+                    keyState.ArrowLeft = true;
+                    break;
+                case 'd':
+                    keyState.ArrowRight = true;
+                    break;
             }
         });
 
-        function animate() {
-            if (animationHasRun) {
+        document.addEventListener('keyup', function (event) {
+            switch (event.key) {
+                case 'w':
+                    keyState.ArrowUp = false;
+                    break;
+                case 'a':
+                    keyState.ArrowLeft = false;
+                    break;
+                case 'd':
+                    keyState.ArrowRight = false;
+                    break;
+            }
+        });
+
+        function updateAnimations() {
+            let selectedAnimation = 'A';
+            box.frameY = 0;
+            if (keyState.ArrowLeft) {
+                box.x -= box.speed;
+            }
+            if (keyState.ArrowRight) {
+                box.x += box.speed;
+            }
+            if (keyState.ArrowUp) {
+                selectedAnimation = 'B';
+                box.frameY = 1;
+            } 
+        }
+
+        let lastTimestamp = 0;
+        function animate(timestamp) {
+            const deltaTime = timestamp - lastTimestamp;
+            if (deltaTime >= FRAME_INTERVAL) {
                 ctx.clearRect(0, 0, canvas.width, canvas.height);
+                if (box.checkCollision(platform)) {
+                    box.y = platform.y - box.height * box.scale;
+                    platform.y = box.y + box.height * box.scale;
+                    box.onPlatform = true; // Make sure onPlatform is true when on platform
+                    box.setPlatform(platform); // Set the current platform
+                } else {
+                    if (box.currentPlatform) {
+                        // Adjust box position based on platform's movement
+                        const platformMovement = platform.y - platform.prevY;
+                        box.y += platformMovement;
+                        box.currentPlatform = null; // Reset current platform if not colliding
+                    }
+                    box.onPlatform = false; // Reset onPlatform flag when not on platform
+                }
+                box.draw(ctx);
+                box.update();
                 platform.draw(ctx);
                 platform.update();
+                updateAnimations();
+                lastTimestamp = timestamp;
             }
-            if (platform.frameX !== platform.maxFrame) {
-                setTimeout(function () {
-                    requestAnimationFrame(animate);
-                }, 100);
-            }
-        };
-    }
-});
+            requestAnimationFrame(animate);
+        }
+
+        animate();
+    });
 </script>
